# eyelid

./: .codespellrc  .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  eyelid_match_ops.long-type-15623194908895329996.txt  out
.cargo/: config.toml
.github/workflows/: ci-bench-changes.yml  ci-bench.yml  ci-build.yml  ci-test.yml  lint-actions.yml  lint-clippy.yml  lint-deps.yml  lint-docs.yml  lint-rustfmt.yml  lint-spell.yml
accel-custom/: Cargo.toml  README.md  kernels.ptx
accel-custom/benches/: poly_ops_custom.rs
accel-custom/src/: fq79_2x64.cuh  fq79_3x32.cuh  fq79_u128.cuh  kernels.cu  lib.rs
accel-custom/src/utils/: int_types.cuh  modifiers.cuh  ptx.cuh
accel-icicle/: Cargo.toml  README.md
accel-icicle/benches/: poly-ops-icicle.rs
accel-icicle/src/: lib.rs
eyelid-match-ops/: Cargo.toml  out
eyelid-match-ops/benches/: cyclotomic-mul.rs  match-ops.rs
eyelid-match-ops/src/: conf.rs  encoded.rs  encrypted.rs  iris.rs  lib.rs  plaintext.rs  primitives.rs
eyelid-match-ops/src/encoded/: conf.rs  test.rs
eyelid-match-ops/src/encoded/test/: matching.rs
eyelid-match-ops/src/encrypted/: test.rs
eyelid-match-ops/src/encrypted/test/: matching.rs
eyelid-match-ops/src/iris/: conf.rs
eyelid-match-ops/src/plaintext/: test.rs
eyelid-match-ops/src/plaintext/test/: gen.rs  matching.rs
eyelid-match-ops/src/primitives/: hamming.rs  poly.rs  poly_rug.rs  yashe.rs
eyelid-match-ops/src/primitives/poly/: fq.rs  fq79.rs  fq79u128.rs  fq79u64x2.rs  fq8.rs  modular_poly.rs  test.rs
eyelid-match-ops/src/primitives/poly/fq/: fq123.rs  fq123bn.rs  fq66.rs  fq66bn.rs  fq79.rs  fq79bn.rs  fq8.rs  fq_tiny.rs  fq_tiny_bn.rs
eyelid-match-ops/src/primitives/poly/modular_poly/: conf.rs  inv.rs  modulus.rs  mul.rs  trivial.rs
eyelid-match-ops/src/primitives/poly/test/: gen.rs  inv.rs  mul.rs
eyelid-match-ops/src/primitives/yashe/: conf.rs  hamming.rs  test.rs
eyelid-match-ops/src/primitives/yashe/test/: encdec.rs  hamming.rs  hom.rs  keygen.rs
eyelid-matcher/: Cargo.toml
eyelid-matcher/src/: main.rs
eyelid-test/: Cargo.toml
eyelid-test/src/: lib.rs
