[workspace]
members = [
    "eyelid-matcher",
    "eyelid-match-ops",
    "eyelid-test",
]
resolver = "2"

# Shared configuration
[workspace.package]
edition = "2021"
readme = "README.md"
publish = true
repository = "https://github.com/Inversed-Tech/eyelid"
version = "0.1.0"

[workspace.dependencies]
# Workspace Crates
# eyelid-matcher and other binary crates don't have any dependents
eyelid-match-ops = { version = "0.1.0", path = "eyelid-match-ops" }
eyelid-test = { version = "0.1.0", path = "eyelid-test" }

# Production
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.4"

bitvec = "1.0.1"
lazy_static = "1.4.0"
zeroize = "1.7.0"

# Compile-time checks of production code
static_assertions = "1.1.0"

# Testing & Benchmarking
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "rayon"] }
rand = "0.8.5"

[workspace.lints.rust]
unsafe_code = "forbid"
