[workspace]
members = [
    "eyelid-matcher",
    "eyelid-match-ops",
    "eyelid-test",
]
resolver = "2"

# Shared configuration
[workspace.package]
authors = ["Inversed Tech <https://inversed.tech/contact-us>"]
edition = "2021"
homepage = "https://inversed.tech/#our-portfolio"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = true
repository = "https://github.com/Inversed-Tech/eyelid"
version = "0.0.0"

[workspace.dependencies]
# Workspace Crates
# eyelid-matcher and other binary crates don't have any dependents
eyelid-match-ops = { version = "0.0.0", path = "eyelid-match-ops" }
eyelid-test = { version = "0.0.0", path = "eyelid-test" }

# Production
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-std = "0.4.0"
bitvec = "1.0.1"

# Compile-time checks of production code
static_assertions = "1.1.0"

# Testing & Benchmarking
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support", "rayon"] }
lazy_static = "1.4.0"
rand = "0.8.5"

[workspace.lints.rust]
unsafe_code = "forbid"
