[package]
name = "eyelid-match-ops"
description = "Iris matching operations"

# Configure in eyelid/Cargo.toml
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]

# Benchmark-only dependencies
benchmark = [
    "criterion",
    "rand",
]

# Temporarily switch to a tiny field to make test errors easier to debug:
# RUSTFLAGS="--cfg tiny_poly" cargo test
# RUSTFLAGS="--cfg tiny_poly" cargo bench --features benchmark

[dependencies]
ark-ff.workspace = true
ark-poly.workspace = true
ark-std.workspace = true

bitvec.workspace = true
lazy_static.workspace = true

static_assertions.workspace = true

# Benchmark-only dependencies
criterion = {workspace = true, optional = true}
rand = {workspace = true, optional = true}

[dev-dependencies]
eyelid-test.workspace = true

lazy_static.workspace = true
rand.workspace = true

[lib]
bench = false

[[bench]]
name = "match-ops"
harness = false
required-features = ["benchmark"]

[lints]
workspace = true
