[package]
name = "eyelid-match-ops"
description = "Iris matching operations"

# Configure in eyelid/Cargo.toml
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[features]

# Benchmark-only dependencies
benchmark = [
    "criterion",
]

# Temporarily switch to a tiny field to make test errors easier to debug:
# RUSTFLAGS="--cfg tiny_poly" cargo test
# RUSTFLAGS="--cfg tiny_poly" cargo bench --features benchmark

[dependencies]
itertools.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

bitvec.workspace = true
colored.workspace = true

derive_more.workspace = true

lazy_static.workspace = true

rand.workspace = true
rand_distr.workspace = true

static_assertions.workspace = true

# Benchmark-only dependencies
criterion = {workspace = true, optional = true}

[dev-dependencies]
eyelid-test.workspace = true

[lib]
bench = false

[[bench]]
name = "match-ops"
harness = false
required-features = ["benchmark"]

[lints]
workspace = true
