[package]
name = "eyelid-matcher"

# Configure in eyelid/Cargo.toml
edition.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
eyelid-match-ops.workspace = true

[dev-dependencies]
eyelid-test.workspace = true

[lints]
workspace = true
