[package]
name = "eyelid-matcher"
description = "Iris matching binary"

# Configure in eyelid/Cargo.toml
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["eyelid-match-ops"]

[dependencies]
eyelid-match-ops.workspace = true

[dev-dependencies]
eyelid-test.workspace = true

[[bin]]
name = "eyelid-matcher"
path = "src/main.rs"
bench = false

[lib]
bench = false

[lints]
workspace = true
