[package]
name = "eyelid-test"
description = "Iris matching test frameworks and test data"

# Configure in eyelid/Cargo.toml
edition.workspace = true
readme.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
static_assertions.workspace = true

[dev-dependencies]
criterion.workspace = true
bitvec.workspace = true

[lints]
workspace = true
